--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,9 @@
 controllers:
     resource: ../src/Controller/
     type: attribute
+
+api_login_check:
+    path: /api/v1/auth/login
+
+api_refresh_token:
+    path: /api/v1/auth/refresh
