--- a/composer.json
+++ b/composer.json
@@ -7,25 +7,38 @@
         "php": ">=8.0",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "doctrine/annotations": "^2.0",
         "doctrine/doctrine-bundle": "*",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "*",
         "gedmo/doctrine-extensions": "^3.12",
         "gesdinet/jwt-refresh-token-bundle": "*",
         "lexik/jwt-authentication-bundle": "*",
+        "nelmio/api-doc-bundle": "^4.12",
+        "phpdocumentor/reflection-docblock": "^5.3",
+        "phpstan/phpdoc-parser": "^1.23",
         "ramsey/uuid": "^4.7",
         "ramsey/uuid-doctrine": "^2.0",
+        "symfony/asset": "5.4.*",
         "symfony/console": "5.4.*",
         "symfony/dotenv": "5.4.*",
         "symfony/flex": "^1.17|^2",
         "symfony/form": "5.4.*",
         "symfony/framework-bundle": "5.4.*",
+        "symfony/monolog-bundle": "^3.8",
+        "symfony/property-access": "5.4.*",
+        "symfony/property-info": "5.4.*",
         "symfony/runtime": "5.4.*",
+        "symfony/serializer": "5.4.*",
+        "symfony/twig-bundle": "5.4.*",
         "symfony/validator": "5.4.*",
-        "symfony/yaml": "5.4.*"
+        "symfony/yaml": "5.4.*",
+        "twig/extra-bundle": "^2.12|^3.0",
+        "twig/twig": "^2.12|^3.0"
     }
     ,
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.23",
         "roave/security-advisories": "dev-latest",
         "symfony/maker-bundle": "^1.50"
     },
