--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -6,9 +6,7 @@ security:
     # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
         users:
-            entity:
-                class: 'App\Entity\User'
-                property: email
+            id: App\Security\JWTUserProvider
 
     firewalls:
         api:
