--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,8 +5,10 @@
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
     exceptions:
+        Symfony\Component\HttpKernel\Exception\NotFoundHttpException: {code: 404 }
         App\Exception\EmailAlreadyExistsException: {code: 404, hidden: false}
         App\Exception\RequestBodyConvertException: {code: 400, hidden: false}
+        App\Exception\UserAlreadyExistsException: {code: 409, hidden: false}
 
 services:
     # default configuration for services in *this* file
@@ -42,3 +44,7 @@ services:
     App\Listener\ValidationExceptionListener:
         tags:
             - { name: kernel.event_listener, event: kernel.exception, priority: 15 }
+
+    App\Listener\JWTCreatedListener:
+        tags:
+            - { name: kernel.event_listener, event: lexik_jwt_authentication.on_jwt_created }
