--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,7 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+    uploadDir: '%kernel.project_dir%/public/upload'
     exceptions:
         Symfony\Component\HttpKernel\Exception\NotFoundHttpException: {code: 404 }
         App\Exception\EmailAlreadyExistsException: {code: 404, hidden: false}
@@ -48,3 +49,6 @@ services:
     App\Listener\JWTCreatedListener:
         tags:
             - { name: kernel.event_listener, event: lexik_jwt_authentication.on_jwt_created }
+
+    App\Service\File\FileService:
+        arguments: ['%uploadDir%']
