--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -25,6 +25,7 @@ security:
     access_control:
          - { path: ^/api/v1/user, roles: IS_AUTHENTICATED_FULLY }
          - { path: ^/api/, roles: PUBLIC_ACCESS }
+         - { path: ^/api/v1/event/list, roles: PUBLIC_ACCESS }
 
 when@test:
     security:
