--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,8 @@
         "symfony/validator": "5.4.*",
         "symfony/yaml": "5.4.*",
         "twig/extra-bundle": "^2.12|^3.0",
-        "twig/twig": "^2.12|^3.0"
+        "twig/twig": "^2.12|^3.0",
+            "oro/doctrine-extensions": "^2.0"
     }
     ,
     "require-dev": {
