--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -23,9 +23,10 @@ security:
                 check_path: api_refresh_token
 
     access_control:
-         - { path: ^/api/v1/user, roles: IS_AUTHENTICATED_FULLY }
-         - { path: ^/api/, roles: PUBLIC_ACCESS }
+         - { path: ^/api/v1/auth, roles: PUBLIC_ACCESS }
+         - { path: ^/api/doc, roles: PUBLIC_ACCESS }
          - { path: ^/api/v1/event/list, roles: PUBLIC_ACCESS }
+         - { path: ^/api/v1/*, roles: IS_AUTHENTICATED_FULLY }
 
 when@test:
     security:
