--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "gesdinet/jwt-refresh-token-bundle": "*",
         "lexik/jwt-authentication-bundle": "*",
         "nelmio/api-doc-bundle": "^4.12",
+        "oro/doctrine-extensions": "^2.0",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.23",
         "ramsey/uuid": "^4.7",
