--- a/.env
+++ b/.env
@@ -37,3 +37,7 @@ DATABASE_PASSWORD=local_crew_postgres
 DATABASE_URL=pgsql://postgres:local_crew_postgres@local-crew.cjbrrg6b559n.us-east-2.rds.amazonaws.com:5432/postgres
 
 CLOUDINARY_URL=cloudinary://337711923177214:n3ai5OTCkgdeA-U3C399PVWpDQU@dmmtj67jc
+
+###> symfony/expo-notifier ###
+EXPO_DSN=expo://yydV3hMyl2n4KvDEEKIjt1XAAngRy1baeVompgKU@default
+###< symfony/expo-notifier ###
