--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,6 +5,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
     uploadDir: '%kernel.project_dir%/public/upload'
+    routing.uuid_regexp: '[0-9a-f]{8}-[0-9a-f]{4}-4[0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}'
     exceptions:
         Symfony\Component\HttpKernel\Exception\NotFoundHttpException: {code: 404 }
         App\Exception\EmailAlreadyExistsException: {code: 404, hidden: false}
