--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "phpstan/phpdoc-parser": "^1.23",
         "ramsey/uuid": "^4.7",
         "ramsey/uuid-doctrine": "^2.0",
+        "sentry/sentry-symfony": "^5.0",
         "stof/doctrine-extensions-bundle": "^1.8",
         "symfony/asset": "5.4.*",
         "symfony/console": "5.4.*",
