--- a/composer.json
+++ b/composer.json
@@ -25,11 +25,13 @@
         "stof/doctrine-extensions-bundle": "^1.8",
         "symfony/asset": "5.4.*",
         "symfony/console": "5.4.*",
+        "symfony/doctrine-messenger": "5.4.*",
         "symfony/dotenv": "5.4.*",
         "symfony/expo-notifier": "5.4.*",
         "symfony/flex": "^1.17|^2",
         "symfony/form": "5.4.*",
         "symfony/framework-bundle": "5.4.*",
+        "symfony/messenger": "^6.0",
         "symfony/mime": "5.4.*",
         "symfony/monolog-bundle": "^3.8",
         "symfony/notifier": "5.4.*",
