--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -11,6 +11,7 @@ RUN apt-get update && apt-get install -y \
         unzip \
     && docker-php-ext-install -j$(nproc) pgsql \
     && docker-php-ext-install -j$(nproc) pdo_pgsql \
+    && docker-php-ext-install -j$(nproc) xml \
     && apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
